2336 flight filter UI polish
it's mock matching time!

--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -130,8 +130,6 @@
     <string name="From_x_TEMPLATE">From %s</string>
 
     <!-- Tablet flight sort/filter controls -->
-    <!-- Flight sort and filter page header -->
-    <string name="flight_preferences">Flight Preferences</string>
     <!-- Header for a flight filter based upon number of stops -->
     <string name="stops">Stops</string>
     <!-- Header for a flight filter, showing a list of flights from different airlines -->
@@ -1560,7 +1558,7 @@
     <!-- Less than or equal to a max  # of stop. Currently set to 1 -->
     <string name="stop_description__max">One or Less</string>
     <!-- Nonstop flights -->
-    <string name="stop_description__nonstop">NonStop</string>
+    <string name="stop_description__nonstop">No Stops</string>
 
     <!-- Filter option for "show all" -->
     <string name="all">All</string>
